// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page renders correctly 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs"
            >
              <div
                class="searchBarContainer"
                style="min-height: 3em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    search
                  </i>
                  <input
                    autocomplete="off"
                    class="inputText"
                    name="query"
                    placeholder="Search"
                    value=""
                  />
                </div>
              </div>
            </li>
            <li
              class="nav__tabs nav__tabs--right"
            />
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="margin-bottom: -3px;"
                />
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="home-page"
    >
      <div
        class="home-page-hero"
      >
        <h1>
          displayTitle-mock
        </h1>
        <h2
          class="sub-title t-subheading"
        >
          subTitle-mock
        </h2>
        <div
          class="btn-ctas"
        >
          <div
            class="download-lts-container"
          >
            <a
              class="circular-container"
              href="https://nodejs.org/dist/mmock-version-2/node-mmock-version-2.tar.gz"
            >
              Download Node (LTS)
            </a>
            <p
              class="t-caption"
            >
              Version mock-version-1 - 
              <a
                href="https://nodejs.org/dist/mock-version-1/node-mock-version-1.tar.gz"
              >
                Get Current
              </a>
            </p>
          </div>
          <a
            class="circular-container inverse"
            href="/learn"
          >
            Learn Node
          </a>
        </div>
      </div>
      <section
        class="node-demo-container"
      >
        <div
          class="node-demo"
        >
          <div
            class="install"
          >
            <div
              class="react-tabs"
              data-rttabs="true"
            >
              <div
                class="install__header"
              >
                <div
                  class="install__header-circles"
                >
                  <div
                    class="install__header-grey-circle"
                  />
                  <div
                    class="install__header-grey-circle"
                  />
                  <div
                    class="install__header-grey-circle"
                  />
                </div>
                <div
                  class="install__header-text"
                >
                  bash
                </div>
              </div>
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="panel:r0:0"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  data-rttab="true"
                  id="tab:r0:0"
                  role="tab"
                  tabindex="0"
                >
                  Windows (Chocolatey)
                </li>
                <li
                  aria-controls="panel:r0:1"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  data-rttab="true"
                  id="tab:r0:1"
                  role="tab"
                >
                  macOS (nvm)
                </li>
                <li
                  aria-controls="panel:r0:2"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  data-rttab="true"
                  id="tab:r0:2"
                  role="tab"
                >
                  Linux (nvm)
                </li>
              </ul>
              <div
                aria-labelledby="tab:r0:0"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="panel:r0:0"
                role="tabpanel"
              >
                <div>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        choco 
                      </span>
                      install nvs
                    </code>
                  </pre>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        nvs 
                      </span>
                      add lts
                    </code>
                  </pre>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        nvs 
                      </span>
                      use lts
                    </code>
                  </pre>
                  <br />
                  <br />
                  <a
                    class="install__docs-button"
                    href="/download/package-manager/#nvs"
                  >
                    Read documentation
                  </a>
                </div>
              </div>
              <div
                aria-labelledby="tab:r0:1"
                class="react-tabs__tab-panel"
                id="panel:r0:1"
                role="tabpanel"
              />
              <div
                aria-labelledby="tab:r0:2"
                class="react-tabs__tab-panel"
                id="panel:r0:2"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
        <svg
          class="leafs-front animations"
        />
        <svg
          class="leafs-middle animations"
        />
        <svg
          class="leafs-back animations"
        />
        <svg
          class="dots"
        />
      </section>
      <section
        class="node-features"
      >
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M255.917 480a32.536 32.536 0 0 1-16.633-4.599l-52.985-32.44c-7.914-4.562-4.023-6.203-1.443-7.141 10.565-3.781 13.713-5.657 24.947-12.285 1.206-.667 2.747-.424 3.955.322l39.71 23.504c1.476.85 3.557.85 4.931 0l155.188-92.246c1.475-.877 2.415-2.646 2.415-4.441V163.869c0-1.85-.94-3.592-2.449-4.528l-155.12-94.672c-1.478-.894-3.421-.894-4.898 0L98.516 159.374c-1.544.903-2.516 2.698-2.516 4.495v186.805c0 1.813.972 3.513 2.481 4.389l39.929 23.972c23.61 12.204 37.59-.17 37.59-14.611V180.725c0-2.652 2.047-4.727 4.596-4.727h22.809c2.515 0 4.597 2.072 4.597 4.727v183.698c0 32.563-19.353 51.248-49.199 51.248-9.156 0-16.397 0-36.552-10.279l-41.584-24.781C70.371 374.459 64 362.965 64 350.656V161.191c0-12.316 6.371-23.784 16.665-29.917L239.35 36.41c10.027-5.88 23.374-5.88 33.332 0l158.65 94.864C441.63 137.423 448 148.899 448 161.191v189.465c0 12.309-6.37 23.75-16.668 29.953l-158.65 94.774a32.52 32.52 0 0 1-16.698 4.599l-.067.018z"
            />
            <path
              d="M304.943 351.998c-64.61 0-84.006-31.61-84.006-59.271 0-2.629 2.048-4.729 4.562-4.729h20.521c2.282 0 4.227 1.7 4.562 4.016 3.084 21.602 16.748 31.15 54.324 31.15 33.399 0 47.091-10.346 47.091-28.684 0-10.592-3.463-18.424-55.407-23.697-43.427-4.441-70.288-14.373-70.288-50.295 0-33.135 26.996-52.49 72.234-52.49 46.128 0 76.462 14 79.173 50.829.102 1.337-.368 2.629-1.241 3.644-.871.965-2.078 1.527-3.353 1.527h-20.591c-2.146 0-4.024-1.562-4.459-3.713-4.401-16.953-16.97-23.402-49.563-23.402-36.486 0-40.746 12.753-40.746 22.607 0 11.963 5.031 15.441 54.294 22.172 48.761 6.663 71.933 16.117 71.933 51.552 0 35.781-28.808 58.783-79.075 58.783l.035.001z"
            />
          </svg>
          <h4>
            JavaScript
          </h4>
          <p>
            Node.js provides support for the JavaScript programming language
          </p>
        </div>
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
            />
          </svg>
          <h4>
            Open Source
          </h4>
          <p>
            Node.js is open source and actively maintained by contributors all over the world
          </p>
        </div>
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 421.6c-18.1 0-33.2-6.8-42.9-10.9-5.4-2.3-11.3 1.8-10.9 7.6l3.5 51c.2 3.1 3.8 4.7 6.3 2.8l14.5-11c1.8-1.4 4.5-.9 5.7 1l20.5 32.1c1.5 2.4 5.1 2.4 6.6 0l20.5-32.1c1.2-1.9 3.9-2.4 5.7-1l14.5 11c2.5 1.9 6.1.3 6.3-2.8l3.5-51c.4-5.8-5.5-10-10.9-7.6-9.8 4.1-24.8 10.9-42.9 10.9z"
            />
            <path
              d="M397.7 293.1l-48-49.1c0-158-93.2-228-93.2-228s-94.1 70-94.1 228l-48 49.1c-1.8 1.8-2.6 4.5-2.2 7.1L130.6 412c.9 5.7 7.1 8.5 11.8 5.4l67.1-45.4s20.7 20 47.1 20c26.4 0 46.1-20 46.1-20l67.1 45.4c4.6 3.1 10.8.3 11.8-5.4l18.5-111.9c.2-2.6-.6-5.2-2.4-7zM256.5 192c-17 0-30.7-14.3-30.7-32s13.8-32 30.7-32c17 0 30.7 14.3 30.7 32s-13.7 32-30.7 32z"
            />
          </svg>
          <h4>
            Everywhere
          </h4>
          <p>
            Node.js has been adapted to work in a wide variety of places
          </p>
        </div>
      </section>
    </main>
    <section
      class="bottom-info"
    >
      <div
        class="random-contributor"
      />
    </section>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://nodejs.org/en/blog/"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`Home page renders i18n when feature toggle is present 1`] = `
<div>
  <div
    class="layout-container"
  >
    <nav
      aria-label="Primary"
      class="nav"
    >
      <div
        class="nav__container"
      >
        <div
          class="nav__startwrapper"
        >
          <a
            href="/"
          >
            <div
              class="logo"
            >
              <svg
                class="nav__logo light-mode-only"
              />
              <svg
                class="nav__logo dark-mode-only"
              />
            </div>
          </a>
        </div>
        <ul
          class="nav__tabs__container"
        >
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/learn"
            >
              Learn
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="https://nodejs.org/en/docs/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Documentation
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/download"
            >
              Download
            </a>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              class="activeStyleTab"
              href="/community"
            >
              Community
            </a>
          </li>
        </ul>
        <div
          class="nav__endwrapper"
        >
          <ul
            class="right-container"
          >
            <li
              class="nav__tabs"
            >
              <div
                class="searchBarContainer"
                style="min-height: 3em; width: 100%; max-width: 7em; box-shadow: none;"
              >
                <div
                  class="searchInputContainer"
                >
                  <i
                    class="material-icons searchIcon"
                  >
                    search
                  </i>
                  <input
                    autocomplete="off"
                    class="inputText"
                    name="query"
                    placeholder="Search"
                    value=""
                  />
                </div>
              </div>
            </li>
            <li
              class="nav__tabs nav__tabs--right"
            />
            <li
              class="nav__tabs"
            >
              <a
                href="https://github.com/nodejs/nodejs.dev"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="sr-only"
                >
                  GitHub
                </span>
                <svg
                  fill="var(--color-text-accent)"
                  style="margin-bottom: -3px;"
                />
              </a>
            </li>
            <li
              class="nav__tabs"
            >
              <button
                class="language-switch"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Switch Language
                </span>
                <i
                  class="material-icons theme-buttons"
                >
                  translate
                </i>
              </button>
              <ul
                class="dropdownList"
                style="left: -10px; top: -15px; visibility: hidden;"
              >
                <li>
                  <button
                    style="font-weight: bold;"
                    type="button"
                  >
                    English
                  </button>
                </li>
                <li>
                  <button
                    style="font-weight: normal;"
                    type="button"
                  >
                    Español
                  </button>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="home-page"
    >
      <div
        class="home-page-hero"
      >
        <h1>
          displayTitle-mock
        </h1>
        <h2
          class="sub-title t-subheading"
        >
          subTitle-mock
        </h2>
        <div
          class="btn-ctas"
        >
          <div
            class="download-lts-container"
          >
            <a
              class="circular-container"
              href="https://nodejs.org/dist/mmock-version-2/node-mmock-version-2.tar.gz"
            >
              Download Node (LTS)
            </a>
            <p
              class="t-caption"
            >
              Version mock-version-1 - 
              <a
                href="https://nodejs.org/dist/mock-version-1/node-mock-version-1.tar.gz"
              >
                Get Current
              </a>
            </p>
          </div>
          <a
            class="circular-container inverse"
            href="/learn"
          >
            Learn Node
          </a>
        </div>
      </div>
      <section
        class="node-demo-container"
      >
        <div
          class="node-demo"
        >
          <div
            class="install"
          >
            <div
              class="react-tabs"
              data-rttabs="true"
            >
              <div
                class="install__header"
              >
                <div
                  class="install__header-circles"
                >
                  <div
                    class="install__header-grey-circle"
                  />
                  <div
                    class="install__header-grey-circle"
                  />
                  <div
                    class="install__header-grey-circle"
                  />
                </div>
                <div
                  class="install__header-text"
                >
                  bash
                </div>
              </div>
              <ul
                class="react-tabs__tab-list"
                role="tablist"
              >
                <li
                  aria-controls="panel:r1:0"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  data-rttab="true"
                  id="tab:r1:0"
                  role="tab"
                  tabindex="0"
                >
                  Windows (Chocolatey)
                </li>
                <li
                  aria-controls="panel:r1:1"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  data-rttab="true"
                  id="tab:r1:1"
                  role="tab"
                >
                  macOS (nvm)
                </li>
                <li
                  aria-controls="panel:r1:2"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  data-rttab="true"
                  id="tab:r1:2"
                  role="tab"
                >
                  Linux (nvm)
                </li>
              </ul>
              <div
                aria-labelledby="tab:r1:0"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="panel:r1:0"
                role="tabpanel"
              >
                <div>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        choco 
                      </span>
                      install nvs
                    </code>
                  </pre>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        nvs 
                      </span>
                      add lts
                    </code>
                  </pre>
                  <pre
                    class="shell-box"
                  >
                    <div
                      class="shell-box-top"
                    >
                      <span>
                        SHELL
                      </span>
                      <button
                        type="button"
                      >
                        copy
                      </button>
                    </div>
                    <code>
                      <span
                        class="install__text__no-select"
                      >
                        $
                      </span>
                      <span
                        class="install__text__command"
                      >
                        nvs 
                      </span>
                      use lts
                    </code>
                  </pre>
                  <br />
                  <br />
                  <a
                    class="install__docs-button"
                    href="/download/package-manager/#nvs"
                  >
                    Read documentation
                  </a>
                </div>
              </div>
              <div
                aria-labelledby="tab:r1:1"
                class="react-tabs__tab-panel"
                id="panel:r1:1"
                role="tabpanel"
              />
              <div
                aria-labelledby="tab:r1:2"
                class="react-tabs__tab-panel"
                id="panel:r1:2"
                role="tabpanel"
              />
            </div>
          </div>
        </div>
        <svg
          class="leafs-front animations"
        />
        <svg
          class="leafs-middle animations"
        />
        <svg
          class="leafs-back animations"
        />
        <svg
          class="dots"
        />
      </section>
      <section
        class="node-features"
      >
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M255.917 480a32.536 32.536 0 0 1-16.633-4.599l-52.985-32.44c-7.914-4.562-4.023-6.203-1.443-7.141 10.565-3.781 13.713-5.657 24.947-12.285 1.206-.667 2.747-.424 3.955.322l39.71 23.504c1.476.85 3.557.85 4.931 0l155.188-92.246c1.475-.877 2.415-2.646 2.415-4.441V163.869c0-1.85-.94-3.592-2.449-4.528l-155.12-94.672c-1.478-.894-3.421-.894-4.898 0L98.516 159.374c-1.544.903-2.516 2.698-2.516 4.495v186.805c0 1.813.972 3.513 2.481 4.389l39.929 23.972c23.61 12.204 37.59-.17 37.59-14.611V180.725c0-2.652 2.047-4.727 4.596-4.727h22.809c2.515 0 4.597 2.072 4.597 4.727v183.698c0 32.563-19.353 51.248-49.199 51.248-9.156 0-16.397 0-36.552-10.279l-41.584-24.781C70.371 374.459 64 362.965 64 350.656V161.191c0-12.316 6.371-23.784 16.665-29.917L239.35 36.41c10.027-5.88 23.374-5.88 33.332 0l158.65 94.864C441.63 137.423 448 148.899 448 161.191v189.465c0 12.309-6.37 23.75-16.668 29.953l-158.65 94.774a32.52 32.52 0 0 1-16.698 4.599l-.067.018z"
            />
            <path
              d="M304.943 351.998c-64.61 0-84.006-31.61-84.006-59.271 0-2.629 2.048-4.729 4.562-4.729h20.521c2.282 0 4.227 1.7 4.562 4.016 3.084 21.602 16.748 31.15 54.324 31.15 33.399 0 47.091-10.346 47.091-28.684 0-10.592-3.463-18.424-55.407-23.697-43.427-4.441-70.288-14.373-70.288-50.295 0-33.135 26.996-52.49 72.234-52.49 46.128 0 76.462 14 79.173 50.829.102 1.337-.368 2.629-1.241 3.644-.871.965-2.078 1.527-3.353 1.527h-20.591c-2.146 0-4.024-1.562-4.459-3.713-4.401-16.953-16.97-23.402-49.563-23.402-36.486 0-40.746 12.753-40.746 22.607 0 11.963 5.031 15.441 54.294 22.172 48.761 6.663 71.933 16.117 71.933 51.552 0 35.781-28.808 58.783-79.075 58.783l.035.001z"
            />
          </svg>
          <h4>
            JavaScript
          </h4>
          <p>
            Node.js provides support for the JavaScript programming language
          </p>
        </div>
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 376.6V206.8c0-46.4-3.7-70.8-22.1-94C374 87.7 348.9 77 310 77h-22V16l-96 96 96 96v-65h22c24.6 0 29 3.6 33.8 9.6 5.5 6.9 8.2 19.1 8.2 54.2v169.8c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4zM384 472c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zM128 48c-35.3 0-64 28.7-64 64 0 23.7 12.9 44.3 32 55.4v209.2c-19.1 11.1-32 31.7-32 55.4 0 35.3 28.7 64 64 64s64-28.7 64-64c0-23.7-12.9-44.3-32-55.4V167.4c19.1-11.1 32-31.7 32-55.4 0-35.3-28.7-64-64-64zm0 424c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm0-320c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40z"
            />
          </svg>
          <h4>
            Open Source
          </h4>
          <p>
            Node.js is open source and actively maintained by contributors all over the world
          </p>
        </div>
        <div
          class="node-features__feature"
        >
          <svg
            alt="Node Feature"
            class="feature-icon"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 421.6c-18.1 0-33.2-6.8-42.9-10.9-5.4-2.3-11.3 1.8-10.9 7.6l3.5 51c.2 3.1 3.8 4.7 6.3 2.8l14.5-11c1.8-1.4 4.5-.9 5.7 1l20.5 32.1c1.5 2.4 5.1 2.4 6.6 0l20.5-32.1c1.2-1.9 3.9-2.4 5.7-1l14.5 11c2.5 1.9 6.1.3 6.3-2.8l3.5-51c.4-5.8-5.5-10-10.9-7.6-9.8 4.1-24.8 10.9-42.9 10.9z"
            />
            <path
              d="M397.7 293.1l-48-49.1c0-158-93.2-228-93.2-228s-94.1 70-94.1 228l-48 49.1c-1.8 1.8-2.6 4.5-2.2 7.1L130.6 412c.9 5.7 7.1 8.5 11.8 5.4l67.1-45.4s20.7 20 47.1 20c26.4 0 46.1-20 46.1-20l67.1 45.4c4.6 3.1 10.8.3 11.8-5.4l18.5-111.9c.2-2.6-.6-5.2-2.4-7zM256.5 192c-17 0-30.7-14.3-30.7-32s13.8-32 30.7-32c17 0 30.7 14.3 30.7 32s-13.7 32-30.7 32z"
            />
          </svg>
          <h4>
            Everywhere
          </h4>
          <p>
            Node.js has been adapted to work in a wide variety of places
          </p>
        </div>
      </section>
    </main>
    <section
      class="bottom-info"
    >
      <div
        class="random-contributor"
      />
    </section>
    <footer
      class="footer"
    >
      <ul
        class="footer__left"
      >
        <li>
          <a
            class="footer__link"
            href="/about/trademark"
          >
            Trademark Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/privacy"
          >
            Privacy Policy
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://github.com/openjs-foundation/cross-project-council/blob/main/CODE_OF_CONDUCT.md#contributor-covenant-code-of-conduct"
          >
            Code of Conduct
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about/security"
          >
            Security Reporting
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="/about"
          >
            About
          </a>
        </li>
        <li>
          <a
            class="footer__link"
            href="https://nodejs.org/en/blog/"
          >
            Blog
          </a>
        </li>
      </ul>
      <ul
        class="footer__right"
      >
        <li>
          © OpenJS Foundation
        </li>
        <li>
          <a
            aria-label="Node.js Github Page Link"
            href="https://github.com/nodejs/node"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="sr-only"
            >
              GitHub
            </span>
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Twitter Link"
            href="https://twitter.com/nodejs"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="Node.js Slack Link"
            href="https://slack.openjsf.org"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              fill="var(--color-text-secondary)"
            />
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
